# NCP

./: .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  INTEGRATING.md  KNOWN_LIMITATIONS.md  NEST_REALTIME.md  NEUROMORPHIC.md  NEURO_CYBERNETIC_PROTOCOL.md  PERFORMANCE.md  PLASTICITY.md  RATIONALE.md  README.md  RELEASE_READINESS.md  RESILIENCE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERSIONING.md  buf.gen.yaml  buf.yaml  deny.toml  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
conformance/: README.md
contract/: capabilities.v1.json  limits.v1.json  manifest.v1.json  observability.v1.json  planes.v1.json  release-gates.v1.json  request-digest.v1.json  security-profiles.v1.json  surface.v1.json
deploy/: README.md  zenoh-access-control.json5
docs/: 0.8-current-baseline.md  1.0-candidate-receipts.md  1.0-scope.md  wire-0.8-capture-migration.md  wire-0.8-stream-identity.md
e2e/: README.md  __init__.py  bounded_json.py  nest_five_networks.py  run_cross_language_e2e.py  test_bounded_json.py  test_runner_status.py
ncp-core/: Cargo.toml  README.md
ncp-core/bindings/: Capabilities.ts  ChannelSpec.ts  CloseSession.ts  CommandFrame.ts  ControlStatus.ts  EntityBinding.ts  ErrorFrame.ts  GatewayAttribution.ts  IdentityClaim.ts  LinkStatus.ts  NetworkRef.ts  NetworkRefKind.ts  Observation.ts  ObservationFrame.ts  OpenSession.ts  Plane.ts  README.md  RecordTarget.ts  ResponderReceipt.ts  RunRequest.ts  SensorFrame.ts  SessionClosed.ts  SessionOpened.ts  SessionRef.ts  StepRequest.ts  StimulusFrame.ts  StimulusKind.ts  StimulusTarget.ts  StreamPosition.ts  index.ts
ncp-core/examples/: ncp_tcp_client.rs  overhead.rs  uav_control_safety.rs
ncp-core/src/: audit.rs  authority.rs  bounded_json.rs  bulk.rs  bus.rs  canonical_digest.rs  codec.rs  contract_identity.rs  idempotency.rs  keys.rs  lib.rs  messages.rs  migration.rs  plant.rs  request_digest.rs  resilience.rs  safety.rs  security.rs  stream_fence.rs  transport.rs
ncp-core/src/migration/: capture.rs
ncp-core/testdata/conformance/: manifest.v1.json  plant-profile.json  security-state-digest.json
ncp-core/testdata/conformance/behavior/: vectors.json
ncp-core/testdata/conformance/vectors/: control_status.json  error.json  open_session.json  sensor_frame.json  session_closed.json  session_opened.json  step_request.json  stimulus_frame.json
ncp-core/testdata/contract/: canonical-digest.v1.json  errors.v1.json  plant-profile.v1.json  security-state-digest.v1.json
ncp-core/testdata/migration/: wire-0.8-reconstructable-capture.json
ncp-core/testdata/proto/: ncp.proto
ncp-core/testdata/schemas/: capabilities.schema.json  close_session.schema.json  command_frame.schema.json  control_status.schema.json  error.schema.json  index.json  link_status.schema.json  observation_frame.schema.json  open_session.schema.json  run_request.schema.json  sensor_frame.schema.json  session_closed.schema.json  session_opened.schema.json  step_request.schema.json
ncp-core/tests/: behavior_conformance.rs  canonical_json_bytes.rs  conformance.rs  profile_digest_conformance.rs
ncp-cpp/: Cargo.toml  README.md
ncp-gateway/: Cargo.toml  README.md
ncp-gateway/src/: main.rs
ncp-python/: Cargo.toml  README.md
ncp-ts/: README.md  package.json  tsconfig.json
ncp-zenoh/: Cargo.toml  README.md
ncp-zenoh/examples/: uav_drone_loop.rs
ncp-zenoh/src/: lib.rs
ncp-zenoh/testdata/conformance/behavior/: vectors.json
ncp-zenoh/testdata/deploy/: zenoh-access-control.json5  zenoh-client-secure.json5
ncp-zenoh/tests/: cross_session_rpc.rs  loopback.rs  safety_governor_over_wire.rs
proto/: README.md  ncp.proto
prototypes/authenticated-ingress/signed-forwarding-envelope/: .gitignore  README.md  SECTION_REVIEW.md  pyproject.toml  run.sh  verify_profile.py  verify_result.py
prototypes/authenticated-ingress/signed-forwarding-envelope/differential/: README.md  corpus.v1.json  generate_corpus.py  python_adapter.py  run.sh  run_differential.py  verify_corpus.py
prototypes/authenticated-ingress/signed-forwarding-envelope/node-verifier/: README.md  package-lock.json  package.json  run.sh  tsconfig.json  verify_profile.mjs  verify_profile.test.mjs
prototypes/authenticated-ingress/signed-forwarding-envelope/node-verifier/src/: cli.ts  errors.ts  strict-json.ts  verifier.ts
prototypes/authenticated-ingress/signed-forwarding-envelope/node-verifier/tests/: common.ts  crypto-strict.test.ts  strict-json.test.ts  verifier.test.ts
prototypes/authenticated-ingress/signed-forwarding-envelope/prototype/: __init__.py  forwarding.py  replay.py  strict.py
prototypes/authenticated-ingress/signed-forwarding-envelope/tests/: __init__.py  common.py  live_result.py  replay_worker.py  test_forwarding.py  test_replay.py  test_strict.py  test_verifiers.py
prototypes/authenticated-ingress/tls-terminating-ingress/: .gitignore  Cargo.toml  README.md  SECTION_REVIEW.md  run.sh  verify_features.py  verify_result.py
prototypes/authenticated-ingress/tls-terminating-ingress/src/: lib.rs
prototypes/authenticated-ingress/tls-terminating-ingress/tests/: ingress.rs  test_verifiers.py
prototypes/authenticated-ingress/zenoh-metadata-probe/: Cargo.toml  README.md  SECTION_REVIEW.md  expected-result.v1.json  run.sh  source-matrix.v1.json  verify_result.py  verify_source_matrix.py
prototypes/authenticated-ingress/zenoh-metadata-probe/src/: main.rs
prototypes/authenticated-ingress/zenoh-metadata-probe/tests/: test_verifiers.py
schemas/: README.md  capabilities.schema.json  close_session.schema.json  command_frame.schema.json  control_status.schema.json  error.schema.json  index.json  link_status.schema.json  observation_frame.schema.json  open_session.schema.json  run_request.schema.json  sensor_frame.schema.json  session_closed.schema.json  session_opened.schema.json  step_request.schema.json  stimulus_frame.schema.json
scripts/: README.md  bench_chunk_overhead.py  bench_gil_overlap.py  build_candidate_dossier.py  check.sh  (+47 more)
(+203 files in other folders)
