[package]
name = "ncp-core"
description = "Neuro-Cybernetic Protocol (NCP) informative Rust reference: canonical-JSON validation, lifecycle and authority state, keys, codecs, safety, and an in-process bus."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["spiking-neural-network", "neurorobotics", "protocol", "nest-simulator", "robotics"]
categories = ["science::robotics", "simulation", "api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/ncp-core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
# TypeScript type generation from the conformance-locked Rust projection.
# `cargo test --features ts` writes ncp-core/bindings/*.ts. Off by default.
# serde-compat so ts-rs honours the existing `#[serde(rename)]` (e.g. "V_m", "ref").
ts-rs = { version = "12", features = ["serde-compat"], optional = true }
# JSON-Schema generation from the Rust serde types. The serde types are the
# conformance-locked informative projection of the normative field-shape IDL, and
# their `#[serde(rename)]` carry the canonical JSON enum strings. `cargo run --features schema
# --bin gen-schemas` regenerates schemas/*.schema.json. Off by default. Replaces the
# previous inversion where schemas were generated from a downstream consumer's models.
schemars = { version = "1", optional = true }

[features]
default = []
ts = ["dep:ts-rs"]
schema = ["dep:schemars"]

[[bin]]
name = "gen-schemas"
path = "src/bin/gen-schemas.rs"
required-features = ["schema"]
