[package]
name = "ncp-gateway"
description = "Project-agnostic NCP Zenoh lifecycle edge that forwards validated canonical JSON to a loopback newline-delimited SessionService."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/ncp-gateway"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "ncp-gateway"
path = "src/main.rs"

[dependencies]
ncp-core = { workspace = true }
ncp-zenoh = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
