[package]
name = "ncp-tls-terminating-ingress-prototype"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
publish = false
description = "Quarantined loopback-only NCP TLS 1.3 authenticated-ingress prototype"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
getrandom = "=0.3.4"
ncp-core = { path = "../../../ncp-core", version = "=1.0.0-rc.1" }
rustls = { version = "=0.23.40", default-features = false, features = ["ring", "std"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = ["ring"] }

[dev-dependencies]
rcgen = { version = "=0.14.8", default-features = false, features = ["pem", "ring"] }
static_assertions = "=1.1.0"
time = "=0.3.47"
